fixed dark mode issue

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,6 @@
 @import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
+
+:root {
+  color-scheme: "light only";
+}
